<resources>
    <string name="app_name">Pupi3</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="sign_out">Sign Out</string>

    <string name="phone_title_text">Phone Number</string>
    <string name="alumno">foto</string>
    <string name="nombre_alumno">Names</string>
    <string name="user">User</string>
    <string name="back_button">atrás</string>
    <string name="foward_button">adelante</string>
    <string name="title_activity_subject">SubjectActivity</string>
    <string name="urlImage">urlImage</string>
    <string name="lastname">LASTNAME</string>
    <string name="names">Nombres</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="title_activity_institutions">Institutions</string>
    <string name="institution_activity_title">Institutions</string>
    <string name="comment">Comment</string>
    <string name="phone_image">phone</string>
    <string name="image_user_activity">imagen_boton_user_activity</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="title_activity_courses">CoursesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_course_activity">Courses</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_class">New Class</string>
    <string name="new_member">New Member</string>
    <string name="vista">Vista</string>
    <string name="title_activity_course_schedule">CourseScheduleActivity</string>
    <string name="add_class_prompt">Add class…</string>
    <string name="institution_name">Institution name</string>
    <string name="course_name">Course name</string>
    <string name="courses">Courses</string>
    <string name="classes">Classes</string>
    <string name="calendar">Calendar</string>
    <string name="user_image">user_image</string>
    <string name="present">Present</string>
    <string name="present_on">PRESENT</string>
    <string name="present_off">ABSENT</string>
    <string name="add_class">Add class…</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="title_activity_export">Summary</string>
    <string name="comments">Comments...</string>
    <string name="export">Export</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title_from">From…</string>
    <string name="title_to">To…</string>

</resources>
