<?xml version="1.0" encoding="utf-8"?>

<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pupil_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/name_layout"
            app:srcCompat="@drawable/ic_subject_color"
            android:contentDescription="@string/urlImage" />

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/lastname"/>

            <TextView
                android:id="@+id/names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/names"/>

        </LinearLayout>

    </RelativeLayout>

</merge>



