<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/app_name"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.gridlayout.widget.GridLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="2"
        app:rowCount="2">

        <TextView
            android:id="@+id/user_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_margin="15dp"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/smartphone"
            android:text="@string/user"
            android:onClick="onSelect"/>

        <TextView
            android:id="@+id/courses_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/courses"
            android:onClick="onSelect"/>

        <TextView
            android:id="@+id/memberships_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/classes"
            android:onClick="onSelect"/>

        <TextView
            android:id="@+id/calendar_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_margin="15dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/calendar"
            android:onClick="onSelect"/>

    </androidx.gridlayout.widget.GridLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>