<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewmodel"
            type="com.nablanet.aula31.core.viewmodel.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".UserActivity"
        tools:showIn="@layout/activity_user">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pupil_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/urlImage"
                app:imageUrl="@{viewmodel.profileImageUrl}"
                app:error="@{@drawable/smartphone}"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/lastname_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:layout_weight="1.0"
                    android:inputType="textCapSentences"
                    android:text="@{viewmodel.user.lastname}"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/names"
                    android:layout_weight="1.0"
                    android:inputType="textCapSentences"
                    android:text="@{viewmodel.user.name}"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/comment_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comment"
                    android:layout_weight="1.0"
                    android:inputType="textCapSentences"
                    android:text="@{viewmodel.user.comment}"
                    tools:ignore="Autofill" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/phone_image"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/smartphone"
                        android:contentDescription="@string/phone_image" />


                    <TextView
                        android:id="@+id/phone_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="8dp"
                        android:hint="@string/hint_phone_number"
                        android:layout_toRightOf="@+id/phone_image"
                        android:layout_toLeftOf="@+id/share_box"
                        android:paddingStart="8dp"
                        tools:ignore="RtlSymmetry"
                        android:layout_toEndOf="@+id/phone_image"
                        android:layout_toStartOf="@+id/share_box" />

                    <CheckBox
                        android:id="@+id/share_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8dp"
                        android:layout_alignParentRight="true"
                        android:text="Publicar"
                        android:layout_marginEnd="8dp"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
